--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "bps_scraper": "./src/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "commander": "^12.0.0",
     "csvtojson": "^2.0.10",
     "dayjs": "^1.11.10",
     "nodemon": "^3.1.0",
-    "puppeteer": "^22.6.1"
+    "puppeteer": "^22.6.2"
   }
 }
